# miden-rust-demo

./: .dockerignore  Cargo.toml  Dockerfile  README.md
config/: config.docker.toml  config.local.toml  config.toml  genesis.toml
src/: main.rs
