[package]
name = "miden-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { git = "https://github.com/0xMiden/miden-client", tag = "agglayer-v0.1", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", tag = "agglayer-v0.1", package = "miden-client-sqlite-store" }
miden-protocol = { git = "https://github.com/0xMiden/miden-base", tag = "agglayer-v0.1", features = ["std"] }
miden-standards = { git = "https://github.com/0xMiden/miden-base", tag = "agglayer-v0.1" }
miden-agglayer = { git = "https://github.com/0xMiden/miden-base", tag = "agglayer-v0.1" }
miden-tx = { git = "https://github.com/0xMiden/miden-base", tag = "agglayer-v0.1" }
miden-assembly = "0.18.3"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
thiserror = "2"

