[package]
name = "miden-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { git = "https://github.com/0xMiden/miden-client", tag = "exp-agglayer-v0.2", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", tag = "exp-agglayer-v0.2", package = "miden-client-sqlite-store" }

miden-protocol = { version = "0.13", features = ["std"] }
miden-standards = { version = "0.13" }
miden-agglayer = { version = "0.13" }
miden-tx = { version = "0.13" }
miden-assembly = "0.20"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
thiserror = "2"

